--- a/css/app.scss
+++ b/css/app.scss
@@ -2,7 +2,7 @@ $ground : #DDD;
 
 
 body {
-    background-color: $ground;
+    background: $ground url(./yanek-yuk-render4e.jpg);
     h1 {
         color: green;
         font-size: 80px;
